--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -53,13 +53,14 @@ body {
 }
 
 .modal-content {
-    width: 400px;
-    height: 120px;
+    width: 450px;
+    height: 200px;
     background-color: white;
     border-radius: 4px;
     padding: 20px;
     position: relative;
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 
 }
 
@@ -70,6 +71,16 @@ body {
     font-size: 35px;
     transform: rotate(45deg);
     cursor: pointer;
+}
+
+.btnClose {
+    position: absolute;
+    bottom: 14px;
+    right: 14px;
+}
+
+#clear-btn {
+    margin-left: 15px;
 }
 
 #wrapper {
